Fixed text overflow on window shrink, and added padding to aboutMe paragraph. MW

--- a/index.css
+++ b/index.css
@@ -16,10 +16,6 @@ h4 {
 	text-align: center;
 }
 
-#resumeButton {
-    margin-bottom: auto;
-}
-
 #mikeDixie {
     margin-left: auto;
     margin-right: auto;
@@ -71,11 +67,17 @@ h4 {
 
 }
 
+#aboutText {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 
 .personalInfo {
     background-color: #f2f3f4;
-    width: 40%;
-    font-size:1.3em;
+    font-size:1.2em;
+    max-width: 50%;
+    word-wrap: break-word;
     margin-right: auto;
     margin-left: auto;
     border-style: solid;
@@ -122,10 +124,11 @@ h4 {
 
 
 .buttons {
-    width: 300px;
+    width: 50%;
     background-color: #68778e;
     color: white;
-    font-size: 1em;
+    font-size: 75%;
+    word-wrap: normal;
     display: inline;
     border-left: 2px white solid;
 }
